ingress-controller/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapp
spec:
  ingressClassName: nginx
  rules:
  - host: todoapp.myappshop.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-service
            port: 
              number: 8080
